--- a/src/package.json
+++ b/src/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp default",
-    "build": "gulp build"
+    "build": "gulp build",
+    "commit": "git-cz",
+    "release": "standard-version"
+  },
+  "config": {
+    "commitizen": {
+      "path": "src/node_modules/cz-conventional-changelog"
+    }
   },
   "license": "ISC",
   "devDependencies": {
@@ -15,6 +22,8 @@
     "@babel/preset-es2015": "^7.0.0-beta.46",
     "autoprefixer": "^8.4.1",
     "browser-sync": "^2.13.0",
+    "commitizen": "^2.10.1",
+    "cz-conventional-changelog": "^2.1.0",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "8.0.0-beta.2",
@@ -44,5 +53,7 @@
     "vinyl-buffer": "^1.0.0",
     "yargs": "^11.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "standard-version": "^4.4.0"
+  }
 }
